# gpu-deployment-tutorial

./: .markdownlint-cli2.yaml  .pre-commit-config.yaml  4-acceleration-examples.md  5-monitoring-and-debugging.md  CONTRIBUTING.md  LICENSE-CODE  README.md  THIRD_PARTY_LICENSES.md  accel-examples-profiling.md  environments.md  monitoring-and-debugging.md  rapids-cli-verify-environment.md  setup.md
.github/workflows/: pre-commit.yml
00-introduction/: 00-introduction-and-gpu-stack.md  README.md  render.sh
envs/: environment.yaml  pixi.toml  pyproject.toml
introduction/: .marprc.yml  README.md  introduction-to-gpu-stack.html  introduction-to-gpu-stack.md  render.sh
introduction/themes/: nvidia.css
notebooks/: accelerate_pandas_zcc.ipynb
scripts/: data-setup.py  gpu-probe-cuda-core.py  pandas-workflow.py  preprocess-cpu-loop.py  preprocess-gpu-loop.py  preprocess-vectorized.py  sklearn-workflow.py  xarray-cpu-baseline.py  xarray-cupy-fixed.py  xarray-cupy-naive.py
