[project]
name = "tutorial-env"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy<2.5", # numba requires this if not pinned unsafe-best-match cause broken env
    "pandas",
    "snakeviz",
    "cuda-python",
    "cupy-cuda13x[ctk]>=14",
    "xarray",
    "netCDF4",
    "cupy-xarray",
    "cuda-core[cu13]",
    "cudf-cu13==26.8.0a982",
    "cuml-cu13==26.8.0a230",
    "dask-cuda==26.8.0a13",
    "jupyterlab-nvdashboard>=0.15",
    "rapids-cli>=0.2.0",
]

[tool.uv]
prerelease = "allow"
index-strategy = "unsafe-best-match"
extra-index-url = ["https://pypi.anaconda.org/rapidsai-wheels-nightly/simple"]
